--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"styled-components": "^5.3.5"
 	},
 	"devDependencies": {
+		"@types/aos": "^3.0.4",
 		"@types/react": "^18.0.17",
 		"@types/react-dom": "^18.0.6",
 		"@vitejs/plugin-react": "^2.1.0",
